--- a/elasticsearch/es-sts.yaml
+++ b/elasticsearch/es-sts.yaml
@@ -70,7 +70,7 @@ spec:
         app: elasticsearch
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: ""
+      # storageClassName: ""
       resources:
         requests:
           storage: 3Gi
