--- a/kibana/kibana-svc.yaml
+++ b/kibana/kibana-svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kibana
-  labels:
-    app: kibana
+  name: kibana-np
 spec:
-  type: ClusterIP
-  ports:
-  - port: 5601
-  selector:
+  selector: 
     app: kibana
+  type: NodePort  
+  ports:
+    - port: 8080
+      targetPort: 5601 
+      nodePort: 30000
